[gd_scene load_steps=7 format=3 uid="uid://k0ihnyqwkt7"]

[ext_resource type="Script" uid="uid://b0tqco6f8ibbj" path="res://scripts/i_tetromio.gd" id="1_wsupd"]
[ext_resource type="Texture2D" uid="uid://bo8f4ukvvpmr6" path="res://Assets/I_Tetromino.png" id="2_fy57g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6m5ay"]
size = Vector2(30.2997, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsupd"]
size = Vector2(18, 118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fy57g"]
size = Vector2(18, 118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrxt3"]
size = Vector2(20, 19)

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource("1_wsupd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Block"]]
position = Vector2(0.5, 0)
scale = Vector2(1.08912, 1.01843)
shape = SubResource("RectangleShape2D_6m5ay")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_fy57g")
region_enabled = true
region_rect = Rect2(76, 26, 32, 128)

[node name="fall_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="moveY_timer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="moveX_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(28, -1)
scale = Vector2(1, 1.01623)
shape = SubResource("RectangleShape2D_wsupd")

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-29, -1)
shape = SubResource("RectangleShape2D_fy57g")

[node name="Down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
position = Vector2(0, 76)
shape = SubResource("RectangleShape2D_jrxt3")

[node name="Top" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(1, -75)
shape = SubResource("RectangleShape2D_jrxt3")

[connection signal="timeout" from="fall_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="moveY_timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="moveX_timer" to="." method="_on_move_x_timer_timeout"]
[connection signal="area_entered" from="Right" to="." method="_on_right_area_entered"]
[connection signal="area_exited" from="Right" to="." method="_on_right_area_exited"]
[connection signal="area_entered" from="Left" to="." method="_on_left_area_entered"]
[connection signal="area_exited" from="Left" to="." method="_on_left_area_exited"]
[connection signal="area_entered" from="Down" to="." method="_on_down_area_entered"]
[connection signal="area_exited" from="Down" to="." method="_on_down_area_exited"]
